deploy: base url and CNAME property in workflow updated to blog subdomain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://pravinmodotholi.me/"
+baseURL = "https://blog.pravinmodotholi.me/"
 languageCode = "en-us"
 title = "Pravin's Blog"
 rssLimit = 20
