Update base URL in config to match new domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.pravinmodotholi.me/"
+baseURL = "https://blog.pravinmodotholi.live/"
 languageCode = "en-us"
 title = "Pravin's Blog"
 rssLimit = 20
