16 : update baseURL in config file to new domain, update readme

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.pravinmodotholi.live/"
+baseURL = "https://blog.pravinmodotholi.tech/"
 languageCode = "en-us"
 title = "Pravin's Blog"
 rssLimit = 20
